--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import './node_modules/@powerhousedao/design-system/dist/style.css';
 @import './html-defaults.css';
 @import './node_modules/@powerhousedao/project-management/dist/style.css';
+@import './node_modules/@uiw/react-md-editor/markdown-editor.css';
+@import './node_modules/@uiw/react-markdown-preview/markdown.css';
 
 /* Uses .dark class for dark mode */
 @custom-variant dark (&:where(.dark, .dark *));
