--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss" source("./");
+@import './node_modules/@powerhousedao/document-engineering/dist/style.css';
 @import './node_modules/@powerhousedao/design-system/dist/style.css';
 @import './html-defaults.css';
 @import './node_modules/@uiw/react-md-editor/markdown-editor.css';
